--- a/xuecheng-plus-content/xuecheng-plus-content-service/pom.xml
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/pom.xml
@@ -13,6 +13,17 @@
 	<dependencies>
 
 
+		<dependency>
+			<groupId>com.xuecheng</groupId>
+			<artifactId>xuecheng-plus-message-sdk</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.xuxueli</groupId>
+			<artifactId>xxl-job-core</artifactId>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
