--- a/xuecheng-plus-parent/pom.xml
+++ b/xuecheng-plus-parent/pom.xml
@@ -8,11 +8,19 @@
     <name>xuecheng-plus-parent</name>
     <description>xuecheng-plus-parent</description>
     <packaging>pom</packaging>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.7.RELEASE</version>
-    </parent>
+    <modules>
+        <module>../xuecheng-plus-base</module>
+        <module>../xuecheng-plus-checkcode</module>
+        <module>../xuecheng-plus-gateway</module>
+        <module>../xuecheng-plus-auth</module>
+        <module>../xuecheng-plus-content</module>
+        <module>../xuecheng-plus-learning</module>
+        <module>../xuecheng-plus-media</module>
+        <module>../xuecheng-plus-orders</module>
+        <module>../xuecheng-plus-message-sdk</module>
+        <module>../xuecheng-plus-search</module>
+        <module>../xuecheng-plus-system</module>
+    </modules>
 
     <properties>
         <java.version>1.8</java.version>
